<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_rect_white"
    android:padding="@dimen/margin_16">

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/txtChooseSource"
        style="@style/TitleTextTheme"
        android:gravity="center"
        android:paddingBottom="@dimen/margin_16"
        android:text="@string/label_choose_source"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/text_large_18"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/txtChooseGallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="@dimen/margin_16"
        android:text="@string/label_choose_from_gallery_max_10"
        android:textColor="@color/colorText"
        android:textSize="@dimen/text_large_16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtChooseSource" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/txtChooseOnline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_choose_online_images"
        android:textColor="@color/colorText"
        android:textSize="@dimen/text_large_16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtChooseGallery" />

</android.support.constraint.ConstraintLayout>